--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,13 @@ autopep8==1.4.4
 certifi==2019.6.16
 chardet==3.0.4
 Django==2.2.3
+django-environ==0.4.5
 django-filter==2.2.0
 gunicorn==19.9.0
 idna==2.8
-Markdown==3.1.1
 pycodestyle==2.5.0
+python-decouple==3.1
 pytz==2019.1
 requests==2.22.0
 sqlparse==0.3.0
 urllib3==1.25.3
-whitenoise==4.1.3
